--- a/doc/trex_stateless.asciidoc
+++ b/doc/trex_stateless.asciidoc
@@ -69,7 +69,7 @@ For information, see the link:trex_manual.html[manual], especially the material 
 * Statistics per stream done in hardware
 * Latency and jitter per stream
 * Blazingly fast automation support 
-** Python 2.7/3.0 Client API 
+** Python 3 Client API 
 ** Python HLTAPI Client API
 * Multi-user support - multiple users can interact with the same TRex instance simultaneously
 * Routing protocols support -- RIP/BGP/OSPF using BIRD 
@@ -104,7 +104,7 @@ TRex has limited functionality compared to IXIA, but has some advantages. The fo
 | Latency Jitter |  Yes. Nanosecond resolution (hardware-based) | Yes. Microsecond resolution (software-based)  |
 | Multi-user support | Yes | Yes |
 | GUI  | Very good | WIP, packet builder, Field Engine, global port statistics, latency, per stream statistics. Differs from IXIA GUI - for details, see: link:https://github.com/cisco-system-traffic-generator/trex-stateless-gui[trex-stateless-gui]  |
-| Cisco pyATS support | Yes | Yes - Python 2.7/Python 3.4 |    
+| Cisco pyATS support | Yes | Yes |    
 | Routing Emulation | Yes | Yes |
 | Port IDs  | Based on IXIA numbers  | Depends on PCI enumeration  
 |=================
@@ -559,7 +559,7 @@ The TRex client requires Python versions 2.7.x or 3.4.x. To change the Python ve
 
 [NOTE]
 =====================================================================
-The client machine should run Python 2.7.x or 3.4.x. Cisco CEL/ADS is supported. The TRex package includes the required link:cp_stl_docs/[client archive].
+The client machine should run Python 3.4 - 3.12. Cisco CEL/ADS is supported. The TRex package includes the required link:cp_stl_docs/[client archive].
 =====================================================================
 
 // What's Cisco CEL/ADS? is there a web link providing info?
